<resources>
    <string name="app_name">Let`s ...</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send"></string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="create_party">Creacte Party</string>
    <string name="private_places">Private Places</string>
    <string name="map_api_key">AIzaSyCY5ik2IrFnYseAKlZj1je9z5jfZQQWnwg</string>
    <string name="action_private_places" />
    <string name="action_settings" />
    <string name="title_activity_test_bottom_sheet">TestBottomSheet</string>
    <string name="str_atv_places">Enter Place Here</string>
    <string name="str_select_place">Select Place</string>>
    <string name="str_set_information">Set Information</string>
    <string name="str_save_party">Save</string>
    <string name="str_name_party">Name Party</string>
    <string name="str_select_category">Select Category</string>
    <string name="str_select_date_time">Select Date and Time</string>
    <string name="str_select_name_party">Select name Party</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_fragment_new_event">fragment_new_event</string>
</resources>
